--- a/pretentiousness.html
+++ b/pretentiousness.html
@@ -5,6 +5,7 @@
     <title>Pretentiousness | Tom Bradley</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
